2003-08-25  Ulrich Drepper  <drepper@redhat.com>

	* libio/oldfileops.c (_IO_old_file_init): Initialize _mode field
	if the object size is large enough.

2003-08-25  Jakub Jelinek  <jakub@redhat.com>

	* elf/ldconfig.c (search_dir): Treat symlink as regular file
	if it won't point to itself unless it is .so symlink for the linker.

2003-08-25  Ulrich Drepper  <drepper@redhat.com>

	* libio/libio.h (_IO_fwide): In the mode==0 optimization, don't
	use _mode if _IO_fwide_maybe_incompatible.
	* libio/iofwide.c (_IO_fwide): Move the test for mode == 0 after
	the compatibility test.

2003-08-25  Jakub Jelinek  <jakub@redhat.com>

	* elf/cache.c (save_cache): Don't write beyond end of file_entries
	buffer.
	Duplicate last old cache entry if the count would be odd.

2003-08-25  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/posix_fadvise64.c: Cast arguments of
	__LONG_LONG_PAIR to long.

2003-08-25  Philip Blundell  <philb@gnu.org>

	* sysdeps/unix/sysv/linux/arm/sysdep.h (PSEUDO_ERRVAL): Define.
	(PSEUDO_END_ERRVAL, ret_ERRVAL): Likewise.

2003-08-18  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/generic/bits/libc-lock.h (__libc_cleanup_pop): Redefine
	and use __libc_cleanup_region_end instead.

2003-08-25  Ulrich Drepper  <drepper@redhat.com>

	* elf/ldconfig.c (search_dir): Revert patch of 2003-7-21.

2003-08-22  Ulrich Drepper  <drepper@redhat.com>

	* io/fcntl.h (posix_fallocate): Change type of third parameter to
	off_t.
	(posix_fallocate64): Change type of third parameter to off64_t.
	* sysdeps/generic/posix_fallocate.c: Adjust for type change.
	* sysdeps/posix/posix_fallocate.c: Likewise.
	* sysdeps/generic/posix_fallocate64.c: Likewise.
	* sysdeps/posix/posix_fallocate64.c: Likewise.  Add compatibility
	code for 32-bit platforms.
	* sysdeps/unix/sysv/linux/i386/Versions: Add new version for
	posix_fallocate64.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/Versions: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/Versions: Likewise.