@@ -1,3 +1,9 @@
+2003-08-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf/ldconfig.c (search_dir): When checking for GNU-style .so
+	link file use the real file name, not the resolved name we got by
+	following the symlinks.
+
 2003-08-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* libio/oldfileops.c (_IO_old_file_init): Initialize _mode field
